tests/snapshots/run_wpt_conformance__coreml_reduceSum_float16_0D_constant_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_sum.https.any.js reduceSum float16 0D constant tensor default options, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type reduce_sum: Param 'x' has incorrect type for operator 'ios16.reduce_sum'. Expected { ...]>, ...]>, ...]>, [?, [?, [?, tensor<fp16, tensor<fp32, tensor<int32 }; got fp16.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[] @bytes([90, 84]);
  }

  nodes {
    [reduceSumOutput] = reduceSum(operand_0, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceSumOutput; }
}
